<resources>
    <string name="app_name">project2</string>
    <string name="name">Name</string>
    <string name="mail">Mail</string>
    <string name="quantity">Quantity</string>
    <string name="q">1</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="order">Order</string>
    <string name="message">Message</string>
    <string name="p">Please click order</string>
    <string name="toppings">Toppings</string>
    <string name="cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
</resources>