<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Input your name"
        android:textAllCaps="true"
        android:inputType="textMultiLine" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppings"
        android:layout_marginBottom="16dp"/>

    <CheckBox
        android:id="@+id/checkbox_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cream"
        android:textAppearance="?android:textAppearanceMedium"
        />

    <CheckBox
        android:id="@+id/checkbox_chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:textAppearance="?android:textAppearanceMedium"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/plus"
            android:onClick="plus"/>

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/q"
            android:textColor="@android:color/black"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/minus"
            android:onClick="minus"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p"
        android:textColor="@android:color/black"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/order"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"/>
</LinearLayout>